fixing some unit test and CI issues

--- a/doc/example_architecture/example_register_set.record.yaml
+++ b/doc/example_architecture/example_register_set.record.yaml
@@ -11,4 +11,4 @@ fields:
     type: Example_Register.Register_T_Le
   - name: Reg_3
     description: The third register.
-    type: Example_Register.Register_T
+    type: Example_Register.Register_T_Le
