removing global gnat2022 flag and instead using pragmas in just the packed record autocode that needs it. This allows us to more slowly update the whole code base to gnat2022

--- a/gen/test/records/simple_variable.record.yaml
+++ b/gen/test/records/simple_variable.record.yaml
@@ -12,5 +12,5 @@ fields:
   - name: Buffer
     type: Buffer_Type
     format: U8x20
-    default: (others => 0)
+    default: "[others => 0]"
     variable_length: Length
