--- a/gen/test/records/simple_variable_offset.record.yaml
+++ b/gen/test/records/simple_variable_offset.record.yaml
@@ -12,6 +12,6 @@ fields:
   - name: Buffer
     type: Buffer_Type
     format: U8x20
-    default: (others => 0)
+    default: "[others => 0]"
     variable_length: Length
     variable_length_offset: +1
