--- a/src/components/ccsds_product_extractor/ccsds_product_extractor.requirements.yaml
+++ b/src/components/ccsds_product_extractor/ccsds_product_extractor.requirements.yaml
@@ -1,5 +1,5 @@
 ---
-description: The requirements for the CCSDS downsampler component are specified below.
+description: The requirements for the CCSDS Product Extractor component are specified below.
 requirements:
   - text: The component shall take receive ccsds packets and extract a data type if it is part of the initial list of products.
   - text: The component shall check the type of the extracted product and verify that it is valid.
