Fix spelling/grammar in doc/example_architecture files
- Fix 'connecter' -> 'connector' typos in command_view yaml comments
- Fix incorrect 'Event Component' -> 'Data Product Component' in test spec comment
- Fix '20 ticks' -> '10 ticks' in event_component tester comment (matches code)
- Fix grammar 'value it and contains' -> 'value and it contains' in enum_record yaml

--- a/doc/example_architecture/enum_record.record.yaml
+++ b/doc/example_architecture/enum_record.record.yaml
@@ -38,7 +38,7 @@ fields:
     type: Short_Float
     format: F32
   - name: Value_5
-    description: This is the fifth value it and contains an Adamant-modeled enumeration type.
+    description: This is the fifth value and it contains an Adamant-modeled enumeration type.
     type: Example_Enums.Second_Enum.E
     default: Example_Enums.Second_Enum.Spaceship
     format: E4
