--- a/doc/example_architecture/command_view.science_assembly.view.yaml
+++ b/doc/example_architecture/command_view.science_assembly.view.yaml
@@ -42,8 +42,8 @@ filters:
     #   component_execution - filter by component execution types (active or passive)
     #   component_context - filter by component and all it's immediate connections
     #   connector_name - filter by connector_names
-    #   connecter_type - filter by connector type
-    #   connecter_kind - filter by connector kinds (recv_async, recv_sync, send, request, service, get, return, provide, modify)
+    #   connector_type - filter by connector type
+    #   connector_kind - filter by connector kinds (recv_async, recv_sync, send, request, service, get, return, provide, modify)
     type: connector_type
     # Required (unless "exclude" is specified instead) -
     # Describes which items to INCLUDE in the view using the
