Fix spelling/grammar in doc/example_architecture (batch 4)
- Fix 'have send out' -> 'have sent out' and 'one two each' -> 'one to each'
  in example_component test/test2/test3/test4/test5
- Fix 'going to now not going to fail' -> 'now not going to fail' in test2
- Fix 'commands Example Science' -> 'commands for the Example Science'
- Fix 'epoc' -> 'epoch' in fault_component.faults.yaml
- Fix 'suspecnsion' -> 'suspension' in main.adb
- Fix 'an base' -> 'a base' in init_base_component.component.yaml
- Fix 'Result should equal -9' -> '-8' (comment/code mismatch) in test_better3/4
- Fix 'Result should less than' -> 'Result should be less than' in test_better3/4
- Fix typo semicolon for quote in command_view yaml comment
- Fix 'rational' -> 'rationale' in requirements yaml

--- a/doc/example_architecture/command_view.science_assembly.view.yaml
+++ b/doc/example_architecture/command_view.science_assembly.view.yaml
@@ -1,7 +1,7 @@
 ---
 # Optional - a description of the view
 description: This is the command view.
-# Optional - layout direction, default is ;left-to-right'.
+# Optional - layout direction, default is 'left-to-right'.
 # Other options include: 'top-to-bottom', 'right-to-left',
 # and 'bottom-to-top'.
 layout: left-to-right
