--- a/doc/example_architecture/example_science.commands.yaml
+++ b/doc/example_architecture/example_science.commands.yaml
@@ -1,5 +1,5 @@
 ---
-description: These are the commands Example Science Component
+description: These are the commands for the Example Science Component
 commands:
   - name: Enable_Science
     description: Start collecting science.
