fix: spelling/grammar corrections batch 8
- user_guide.tex: due the -> due to the, in in -> in, the the -> the,
  representation the puts -> that puts, describe out -> describe,
  can used/to described -> can use/to describe
- command_protector: due the -> due to the

--- a/src/components/command_protector/command_protector.packets.yaml
+++ b/src/components/command_protector/command_protector.packets.yaml
@@ -3,4 +3,4 @@ description: Packets for the Command Protector component.
 packets:
   - name: Error_Packet
     type: Command.T
-    description: This packet contains a protected command that was dropped due the component not being `armed'.
+    description: This packet contains a protected command that was dropped due to the component not being `armed'.
