fix: correct 'Optionoal'/'descriptiono' typos in test YAML comments
Fixed in test_better2, test_better3, and test_better4 simple_package.tests.yaml files.

--- a/doc/example_architecture/simple_package/test_better2/simple_package.tests.yaml
+++ b/doc/example_architecture/simple_package/test_better2/simple_package.tests.yaml
@@ -5,7 +5,7 @@ description: This is a set of unit tests for the Simple_Package package.
 tests:
     # Required - name of test
   - name: Test_That_Should_Pass
-    # Optionoal - descriptiono of test
+    # Optional - description of test
     description: This test should pass.
   - name: Test_That_Should_Fail
     description: This test should not pass.
