Fix grammar, spelling, and comment/code mismatches in redo tests and ccsds components
- redo/test/c_compile/c_src/file3.c.do: Fix grammar 'should not built not linked' -> 'should not be built or linked'
- redo/test/spark_compile/all.prove.yaml: Fix copy-paste description referencing FSW image selection algorithm
- ccsds_command_depacketizer tests.yaml: Fix duplicate 'are are' -> 'are'
- ccsds_downsampler/apid_tree.ads: Fix comment/code mismatch - comment said Ccsds_Downsample_Product_Entry_List_Access but type is Ccsds_Downsample_Packet_List_Access
- apid_tree tests: Fix 'apid_ tree' -> 'apid tree' in test descriptions

--- a/redo/test/spark_compile/all.prove.yaml
+++ b/redo/test/spark_compile/all.prove.yaml
@@ -1,4 +1,4 @@
 ---
-description: This is the GNATprove configuration for the FSW image selection algorithm
+description: This is the GNATprove configuration for the SPARK compilation test
 level: 2
 mode: "gold"
