Fix grammar and spelling in ccsds_downsampler component
- requirements.yaml: Fix 'shall take receive' -> 'shall receive', 'APID match' -> 'APID matches', 'is indicates' -> 'indicates'
- component.yaml: Fix 'Its recommended' -> 'It\'s recommended'
- events.yaml: Fix 'a Apid' -> 'an APID', 'the id' -> 'the ID'
- generator tex: Fix 'gleam' -> 'glean', 'a autogenerated' -> 'an autogenerated'

--- a/src/components/ccsds_downsampler/ccsds_downsampler.events.yaml
+++ b/src/components/ccsds_downsampler/ccsds_downsampler.events.yaml
@@ -7,5 +7,5 @@ events:
     description: This event indicates that the filter factor for a particular id has been set based on what was commanded.
     param_type: Filter_Factor_Cmd_Type.T
   - name: Factor_Filter_Change_Failed_Invalid_Apid
-    description: This event indicates that the command received a Apid it could not find so it fails since it cannot find the id.
+    description: This event indicates that the command received an APID it could not find so it fails since it cannot find the ID.
     param_type: Filter_Factor_Cmd_Type.T
