Fix error message: 'extracted_time' should be 'current_time' in product extractor model

--- a/src/components/ccsds_downsampler/test/ccsds_downsampler.tests.yaml
+++ b/src/components/ccsds_downsampler/test/ccsds_downsampler.tests.yaml
@@ -1,5 +1,5 @@
 ---
-description: This is a unit test suite for the Event Filter component
+description: This is a unit test suite for the CCSDS Downsampler component
 tests:
   - name: Test_Downsample_Packet
     description: This unit test is to test the cases when the component will downsample an APID and permutations related to the filter factor.
