Fix copy-paste errors in ccsds_router and ccsds_serial_interface
- ccsds_router: Fix mixed context view description (said 'passive')
- ccsds_router: Fix figure caption for mixed context (said 'passive')
- ccsds_router: Fix 'gleam' -> 'glean', 'assemble_name' -> 'assembly_name'
- ccsds_router: Fix comment 'Send packet 0 async' when sending packet 9
- ccsds_router: Fix comment 'sync' when actually sending async
- ccsds_router: Fix test_component connector descriptions (said 'Data products')
- ccsds_serial_interface: Fix 'send a receive' -> 'send and receive'
- ccsds_serial_interface: Fix 'Socket Interface' -> 'Serial Interface' throughout
- ccsds_serial_interface: Fix 'socket' -> 'serial port' in event descriptions
- ccsds_serial_interface: Fix 'as received' -> 'has received'

--- a/src/components/ccsds_router/doc/assembly/mixed.context.view.yaml
+++ b/src/components/ccsds_router/doc/assembly/mixed.context.view.yaml
@@ -1,5 +1,5 @@
 ---
-description: This view shows the passive context.
+description: This view shows the mixed context.
 layout: left-to-right
 filters:
   - name: rm_component
