Fix spelling/grammar: its/it's, emanating, protected, timeout, arm command and

--- a/src/components/ccsds_socket_interface/ccsds_socket_interface.component.yaml
+++ b/src/components/ccsds_socket_interface/ccsds_socket_interface.component.yaml
@@ -1,6 +1,6 @@
 ---
 description: |
-  The Socket Interface Component is an interface component which connects the rest of the assembly to an outside entity (usually the ground system) via a TCP/IP socket. It spawns an internal task to listen to the socket for incoming data. It also provides an asynchronous receive connector which it services on it's task, sending any data it receives out of the socket. The data send and receive connectors are CCSDS.
+  The Socket Interface Component is an interface component which connects the rest of the assembly to an outside entity (usually the ground system) via a TCP/IP socket. It spawns an internal task to listen to the socket for incoming data. It also provides an asynchronous receive connector which it services on its task, sending any data it receives out of the socket. The data send and receive connectors are CCSDS.
 execution: active
 init:
   description: This initialization subprogram connects the component to a TCP socket on the given address and port.
