Fix spelling/grammar: proteced→protected, ececution→execution, eminating→emanating, sends ccsds→sends commands, execution→execute

--- a/src/components/command_router/doc/assembly/command_sender.component.yaml
+++ b/src/components/command_router/doc/assembly/command_sender.component.yaml
@@ -1,5 +1,5 @@
 ---
-description: A passive component which sends ccsds
+description: A passive component which sends commands
 execution: either
 connectors:
   - type: Command.T
