--- a/src/components/command_router/command_router.component.yaml
+++ b/src/components/command_router/command_router.component.yaml
@@ -38,7 +38,7 @@ connectors:
   - description: This is the command receive connector for the Command Router. The NOOP commands sent on this connector will be executed by the command router. This connector will usually be connected in loopback from the Command_T_Send connector in order to provide aliveness test capabilities, or disconnected completely.
     type: Command.T
     kind: recv_async
-  - description: This connector is used to register the Command Router's NOOP commands at initialization, and respond to NOOP commands during ececution. It is usually connected in loopback to the Command_Response_T_Recv_Async connector.
+  - description: This connector is used to register the Command Router's NOOP commands at initialization, and respond to NOOP commands during execution. It is usually connected in loopback to the Command_Response_T_Recv_Async connector.
     type: Command_Response.T
     kind: send
   - description: Events are sent out of this connector.
