Fix typos and copy-paste errors in command_sequencer types and connector components
- packed_variable_array.record.yaml: 'prodided' -> 'provided'
- command_fail_error_type.record.yaml: Fix copy-pasted description (was engine summary, not command failure)
- engine_error_type.record.yaml: Fix copy-pasted description (was engine summary, not error info)
- 32bit/64bit sequence_length_error.record.yaml: 'holds information invalid' -> 'holds information about an invalid'
- connector_delayer/protector/queuer: 'The is generic component' -> 'This is a generic component'
- connector_delayer: 'protect' -> 'delay' in generic description
- connector_queuer: 'protect' -> 'queue' in generic description

--- a/src/components/connector_delayer/connector_delayer.component.yaml
+++ b/src/components/connector_delayer/connector_delayer.component.yaml
@@ -7,7 +7,7 @@ execution: active
 with:
   - Serializer_Types
 generic:
-  description: The is generic component in that it can be instantiated to protect a connector of any type at compile time.
+  description: This is a generic component in that it can be instantiated to delay a connector of any type at compile time.
   parameters:
     - name: T
       description: The generic type of data passed in and out of the component.
