--- a/src/components/connector_queuer/connector_queuer.component.yaml
+++ b/src/components/connector_queuer/connector_queuer.component.yaml
@@ -4,7 +4,7 @@ execution: active
 with:
   - Serializer_Types
 generic:
-  description: The is generic component in that it can be instantiated to protect a connector of any type at compile time.
+  description: This is a generic component in that it can be instantiated to queue a connector of any type at compile time.
   parameters:
     - name: T
       description: The generic type of data passed in and out of the component.
